Fixed modal on mobile

--- a/assets/styles/header.scss
+++ b/assets/styles/header.scss
@@ -230,6 +230,7 @@ nav {
     grid-template-rows: none;
 }
 .specifier-box {
+    margin: auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
